# davinci-resolve-mcp

./: .gitignore  .mcp.json  CLAUDE.md  HANDOFF.md  README.md  STATUS_AUSWERTUNG.md  pyproject.toml
docs/: SETUP.md  TOOLS.md  TROUBLESHOOTING.md  resolve_api_reference.md
docs/superpowers/plans/: 2026-03-28-phase6-audio-fairlight.md  2026-03-28-phase7-transitions.md  2026-03-28-phase8-marker-editing.md  2026-03-28-v1.5.0-full-stack-api-erweiterung.md  2026-03-29-sizilien-erinnerungsvideo.md  2026-03-30-v1.9.0-trim-multiclip-global-mcp.md
docs/superpowers/specs/: 2026-03-28-cinematic-drone-edit-design.md  2026-03-28-phase6-7-8-design.md  2026-03-28-v1.5.0-full-stack-api-erweiterung-design.md  2026-03-29-sizilien-erinnerungsvideo-design.md  2026-03-30-v1.9.0-trim-multiclip-global-mcp-design.md
scripts/: check_environment.sh  start_server.sh  test_resolve_alive.py
src/: resolve_connection.py  server.py
src/tools/: color.py  deliver.py  fairlight.py  fusion.py  media_pool.py  project.py  timeline.py
src/utils/: error_handling.py  platform_detect.py
tests/: test_connection.py  test_fx.py  test_stability.py  test_tools.py
